# flask-poetry-demo

./: README.rst  app.py  pyproject.toml
tests/: test_flask_poetry_demo.py
